plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'dev.skrra'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/snapshot' }
	google()
	maven { url 'https://repo.spring.io/milestone' }
	maven { url 'https://repo.spring.io/snapshot' }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'


	// https://mvnrepository.com/artifact/org.telegram/telegrambots
	implementation 'org.telegram:telegrambots:6.9.7.1'

	implementation 'org.springframework.boot:spring-boot-starter-validation'



	implementation platform("org.springframework.ai:spring-ai-bom:1.0.0-SNAPSHOT")
	implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter'
	implementation 'org.springframework.ai:spring-ai-anthropic-spring-boot-starter'

	// JPA and SQLite
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.xerial:sqlite-jdbc:3.45.1.0'
	implementation 'org.hibernate.orm:hibernate-community-dialects'
}

tasks.named('test') {
	useJUnitPlatform()
}
